fix for stage character image slide in on mobile

--- a/winning-at-smash-4/src/assets/scss/2-generic/animations.scss
+++ b/winning-at-smash-4/src/assets/scss/2-generic/animations.scss
@@ -21,6 +21,16 @@
 @keyframes slideFromRight {
 	0% {
 		transform: translateX(var(--amount, 300px));
+	}
+
+	100% {
+		transform: translateX(0);
+	}
+}
+
+@keyframes slideFadeFromRight {
+	0% {
+		transform: translateX(var(--amount, 300px));
 		opacity: 0;
 	}
 
@@ -46,8 +56,12 @@
 	animation-name: slideFromRight;
 	animation-duration: var(--duration, 0.6s);
 	animation-fill-mode: both;
-	animation-timing-function: ease;
+	animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
 	animation-delay: var(--delay, 0);
+
+	@include media-breakpoint-up(md) {
+		animation-name: slideFadeFromRight;
+	}
 }
 
 .spinner-fade-exit {
